<resources>
    <string name="app_name">Oi Shun</string>
    <string name="recordbutton">recordButton</string>
    <string name="pausebutton">pauseButton</string>
    <string name="backbutton">backButton</string>
    <string name="tab_text_1">Explore</string>
    <string name="tab_text_2">Subscriptions</string>
    <string name="elapsedTimeInitial">0:00</string>
    <string name="remainingTimeInitial">-0:00</string>
    <string name="audioart">AudioArt</string>
    <string name="play">play</string>
    <string name="volume">volume</string>
    <string name="rewind">rewind</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="unsubscribe">UNSUBSCRIBE</string>
    <string-array name="contentNames">
        <item>Content Name</item>
        <item>Content Name</item>
        <item>Content Name</item>
        <item>Content Name</item>
        <item>Content Name</item>
        <item>Content Name</item>
        <item>Content Name</item>
        <item>Content Name</item>
        <item>Content Name</item>
        <item>Content Name</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hint"><i>Search...</i></string>
    <string name="todo">TODO</string>
</resources>
