<?xml version="1.0" encoding="utf-8"?>

<!--
    voice recorder page design

    @author A.M. Aahad
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/voice_recorder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageButton
        android:id="@+id/recordButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/record_button_image"
        android:clickable="true"
        android:contentDescription="@string/recordbutton"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:srcCompat="@drawable/round_button"
        tools:srcCompat="@drawable/round_button" />

    <Chronometer
        android:id="@+id/recordTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordButton">

    </Chronometer>

    <TextView
        android:id="@+id/storageRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="47.8 GB remaining"
        android:textColor="@color/oiShunYellow"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordTimer" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/pause_button_image"
        android:clickable="true"
        android:contentDescription="@string/pausebutton"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storageRemaining"
        app:srcCompat="@drawable/round_button"
        tools:srcCompat="@drawable/round_button"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="18dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back_button_image"
        android:clickable="true"
        android:contentDescription="@string/backbutton"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/round_button"
        tools:srcCompat="@drawable/round_button" />

    <TextView
        android:id="@+id/pausedStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Paused "
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pauseButton"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>